--- a/home.html
+++ b/home.html
@@ -197,10 +197,10 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-6 text-center">
                     <div class="social-media">
-                        <a href="https://www.facebook.com/" target="_blank" class="text-white me-3"><img src="icones/facebook.png" alt="facebook" class="footer-icon"></a>
-                        <a href="https://www.instagram.com/alek_falcao/" target="_blank" class="text-white me-3"><img src="icones/instagram.png" alt="instagram" class="footer-icon"></a>
-                        <a href="https://www.linkedin.com/in/alexsander-falcão-b6602a228/" target="_blank" class="text-white me-3"><img src="icones/linkedin.png" alt="LinkedIn" class="footer-icon"></a>
-                        <a href="https://github.com/AlexsanderFalcao" target="_blank" class="text-white"><img src="icones/github.png" alt="github" class="footer-icon"></a>
+                        <a href="https://www.facebook.com/" target="_blank" class="text-white me-3"><img src="icons/face.png" alt="facebook" class="footer-icon"></a>
+                        <a href="https://www.instagram.com/alek_falcao/" target="_blank" class="text-white me-3"><img src="icons/insta.png" alt="instagram" class="footer-icon"></a>
+                        <a href="https://www.linkedin.com/in/alexsander-falcão-b6602a228/" target="_blank" class="text-white me-3"><img src="icons/li.png" alt="LinkedIn" class="footer-icon"></a>
+                        <a href="https://github.com/AlexsanderFalcao" target="_blank" class="text-white"><img src="icons/git.png" alt="github" class="footer-icon"></a>
                     </div>
                 </div>
             </div>
